@@ -8,8 +8,8 @@
 </style>
 <div id="plugin_container" class="eqLogic-widget eqLogic allowResize" style="width:#width#;height:#height#;border:#border#;border-radius:#border-radius#;background-color: #background-color#;color: #color#; #style#" data-category="" data-eqLogic_id="#id#" data-version="#version#" >
   <center>
-    <span style="padding-left: 110px;font-size: 1.2em;#hideEqLogicName#"><a href="#eqLink#">#name_display# <span style="font-size: 0.85em;">#object_name#</span></a></span>
-    <span style="float: right;width:110px;">
+    <span style="padding-left: 30px;font-size: 1.2em;#hideEqLogicName#"><a href="#eqLink#">#name_display# <span style="font-size: 0.85em;">#object_name#</span></a></span>
+    <span style="float: right;width:110px;display: #statuts_display#;">
       <i id="surveillanceStationcam" class="fa fa-camera" title="Statut de la caméra"> <span id="statecam#id#"></span></i>
       <i id="surveillanceStationmouv" class="icon jeedom-mouvement" title="Détection de mouvement" style="display:#motion_display#;"><span id="motionstatus#id#"></span></i>
       <i id="surveillanceStationhm" class="fa fa-home" title="Home mode global" style="display: #homemode_display#;"> <span id="homemodestatus#id#" style="display: #homemode_display#;"></span></i>
@@ -43,7 +43,7 @@
           <div class="display"><img src='#urllive#' alt='' class="img-responsive" data-eqLogic_id="#id#" /></div>
       </center>
   </div>
-  <center>#action#</center>
+  <center><span style="display: #actions_display#;">#action#</span></center>
   <span class="statusCmd" style="position : absolute;left : 5px;bottom : 0px; width : 30px;z-index: 1030;"></span>
   <script>
         if ($(".md_cameraZoom[data-eqLogic_id=#id#]").length > 1) {
